 [package]
 name = "slint_component"
 edition = "2021"
 version.workspace = true
 authors.workspace = true 

# [lib]
# path = "src/lib.rs"
# crate-type = ["cdylib"]

build = "build.rs"

[dependencies]
slint = { version = "1.3.1"}

wasm-bindgen = "0.2.89"
getrandom = { version = "0.2.11", features = ["js"] }

rfd = "0.12.1"

web-sys={version="0.3.46",features = [
  'Document',
  'Window',
]}

wasm-bindgen-futures = "0.4.19"
winit = "0.29.4" 
futures = {version="0.3.10",features=["thread-pool"]}

[build-dependencies]
slint-build = "1.3.1"
